Replace Collectors.toList() with .toList() and update dependencies